// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content matches snapshot 1`] = `
Array [
  .c0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="c0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 3rem;
  padding: 0 3rem 0 3rem;
  font-size: 18px;
  font-family: "Noto Sans";
}

.c6 *:target {
  background-color: #ffffdd;
}

.c6 * {
  overflow: initial;
}

.c7 {
  font-family: "Roboto Condensed",serif;
  font-size: 19px;
  line-height: 29px;
}

.c1 {
  background-color: white;
  overflow-x: hidden;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  width: 300px;
}

.c2 {
  position: fixed;
  top: 10px;
  height: 40px;
  width: 40px;
  background: none;
  padding: 0;
  border: none;
  z-index: 1;
  outline: none;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  left: 240px;
}

.c2 span {
  width: 100%;
  background: #000;
  padding-top: 10%;
  display: block;
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.c2 span:nth-child(1) {
  -webkit-transform: rotateZ(45deg);
  -ms-transform: rotateZ(45deg);
  transform: rotateZ(45deg);
}

.c2 span:nth-child(2) {
  opacity: 0;
}

.c2 span:nth-child(3) {
  -webkit-transform: rotateZ(-45deg);
  -ms-transform: rotateZ(-45deg);
  transform: rotateZ(-45deg);
  margin-top: -20%;
}

.c3 {
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  width: 300px;
  overflow-y: auto;
  font-size: 15px;
  padding: 10px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

.c3 ol {
  padding-inline-start: 10px;
}

.c3 > * {
  -webkit-transition-property: visibility;
  transition-property: visibility;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  visibility: visible;
}

.c4 {
  list-style: none;
}

.c5 {
  list-style: none;
  overflow: visible;
  position: relative;
}

.c5:before {
  font-weight: bold;
  content: '>';
  position: absolute;
  right: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <button
        aria-label="Click to close the Table of Contents"
        className="c2"
        onClick={[Function]}
        role="button"
      >
        <span />
        <span />
        <span />
      </button>
      <div
        className="c3"
      >
        <nav>
          <ol>
            <li
              className="c4"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
        <div>
          <h2>
            Table of Contents
          </h2>
          <nav>
            <ol>
              <li
                className="c4"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "chapter title",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      aria-label="Current Page"
                      className="c5"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "page title",
                          }
                        }
                        href="/books/book/pages/page"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
    <div
      className="c6"
      id="main-content"
      tabIndex={-1}
    >
      <div>
        <h1
          className="c7"
        >
          book title
           / 
          page title
        </h1>
      </div>
      <div
        className=""
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "some page content yo",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`content renders empty state 1`] = `
Array [
  .c0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="c0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 3rem;
  padding: 0 3rem 0 3rem;
  font-size: 18px;
  font-family: "Noto Sans";
}

.c5 *:target {
  background-color: #ffffdd;
}

.c5 * {
  overflow: initial;
}

.c1 {
  background-color: white;
  overflow-x: hidden;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  width: 300px;
}

.c2 {
  position: fixed;
  top: 10px;
  height: 40px;
  width: 40px;
  background: none;
  padding: 0;
  border: none;
  z-index: 1;
  outline: none;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  left: 240px;
}

.c2 span {
  width: 100%;
  background: #000;
  padding-top: 10%;
  display: block;
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.c2 span:nth-child(1) {
  -webkit-transform: rotateZ(45deg);
  -ms-transform: rotateZ(45deg);
  transform: rotateZ(45deg);
}

.c2 span:nth-child(2) {
  opacity: 0;
}

.c2 span:nth-child(3) {
  -webkit-transform: rotateZ(-45deg);
  -ms-transform: rotateZ(-45deg);
  transform: rotateZ(-45deg);
  margin-top: -20%;
}

.c3 {
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  width: 300px;
  overflow-y: auto;
  font-size: 15px;
  padding: 10px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

.c3 ol {
  padding-inline-start: 10px;
}

.c3 > * {
  -webkit-transition-property: visibility;
  transition-property: visibility;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  visibility: visible;
}

.c4 {
  list-style: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <button
        aria-label="Click to close the Table of Contents"
        className="c2"
        onClick={[Function]}
        role="button"
      >
        <span />
        <span />
        <span />
      </button>
      <div
        className="c3"
      >
        <nav>
          <ol>
            <li
              className="c4"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <div
      className="c5"
      id="main-content"
      tabIndex={-1}
    >
      <div />
      <div
        className=""
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
